# Clockstar

./: .gitignore  CMakeLists.txt  CircuitWatch.h  CircuitWatch.ino  README.md
Components/: MFCC.cpp  MFCC.h  MotionSensor.cpp  MotionSensor.h  README.md
Screens/: LockScreen.cpp  LockScreen.h  MenuScreen.cpp  MenuScreen.h
src/: CircuitWatch.h
src/Apps/GProg/: GProg.cpp  GProg.h  Prog.cpp  Prog.h  Recording.h
src/Apps/Playground/: Playground.cpp  Playground.h
src/Bitmaps/: Bitmaps.hpp  arrow_left.hpp  arrow_right.hpp  cross.hpp  lock.hpp  lock_closed.hpp  lock_open.hpp  message.hpp  yes.hpp
src/Bitmaps/analogni/: analog_bg.hpp
src/Bitmaps/apps/: app_gesture.hpp  app_gesture_old.hpp  app_notifications.hpp  app_playground.hpp  app_programming.hpp  app_settings.hpp  apps.hpp
src/Components/: MotionSensor.cpp  MotionSensor.h  Renderer.cpp  Renderer.h
src/Screens/: LockScreen.cpp  LockScreen.h  MenuScreen.cpp  MenuScreen.h  NotifScreen.cpp  NotifScreen.h
src/Screens/LockScreen/: LockScreen.cpp  LockScreen.h
src/Services/: BluetoothService.cpp  BluetoothService.h  Kickstarter.cpp  Kickstarter.h  MPULocator.cpp  MPULocator.h  Notification.h  NotificationService.cpp  NotificationService.h
